chore: exclude CSS from language statistics

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,9 @@
 # Mark compiled JavaScript as generated code
 *.js linguist-generated=true
 
+# Exclude CSS from language statistics
+*.css linguist-vendored=true
+
 # Exclude build artifacts and dependencies
 elm-stuff/* linguist-vendored
 node_modules/* linguist-vendored
